WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29364
SourceCode() does not initialize m_provider
https://bugs.webkit.org/show_bug.cgi?id=29364
Summary
SourceCode() does not initialize m_provider
Jędrzej Nowacki
Reported
2009-09-18 02:24:19 PDT
Default constructor of SourceCode class doesn't initialize m_provider member. It could be source of problems in future. Right now nobody use it...
Attachments
patch resolving problem
(1.11 KB, patch)
2009-09-18 02:28 PDT
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jędrzej Nowacki
Comment 1
2009-09-18 02:28:44 PDT
Created
attachment 39753
[details]
patch resolving problem
Alexey Proskuryakov
Comment 2
2009-09-18 11:39:15 PDT
Please mark the patch for review by clicking "Details" link to the right of it, and changing review flag to "?".
Jędrzej Nowacki
Comment 3
2009-09-21 00:03:04 PDT
(In reply to
comment #2
)
> Please mark the patch for review by clicking "Details" link to the right of it, > and changing review flag to "?".
Done
Eric Seidel (no email)
Comment 4
2009-09-21 13:18:47 PDT
Comment on
attachment 39753
[details]
patch resolving problem That seems like a rather needlessly verbose ChangeLog entry. I think all I would have said was: Fix SourceCode() to initialize m_provider.
https://bugs.webkit.org/show_bug.cgi?id=29364
This is OK though. Since you're not a committer I'll assume you wanted cq=? and set cq+ for you.
WebKit Commit Bot
Comment 5
2009-09-21 13:37:23 PDT
Comment on
attachment 39753
[details]
patch resolving problem Clearing flags on attachment: 39753 Committed
r48593
: <
http://trac.webkit.org/changeset/48593
>
WebKit Commit Bot
Comment 6
2009-09-21 13:37:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug