2009-09-21  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Eric Seidel.

        [Fix] SourceCode's uninitialized member

        Potential source of crashes and bugs was fixed. Default constructor
        didn't initialized m_provider member.

        https://bugs.webkit.org/show_bug.cgi?id=29364

        * parser/SourceCode.h:
        (JSC::SourceCode::SourceCode):

Canonical link: https://commits.webkit.org/40156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48593 268f45cc-cd09-0410-ab3c-d52691b4dbfc